--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -34,7 +34,7 @@
     </ng-container>
   </ng-container>
 
-  <button class="btn btn-primary" type="submit">Register</button>
+  <button class="btn btn-primary" [disabled]="form.invalid" type="submit">Register</button>
 
   
 
