--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,28 +1,61 @@
+<mat-toolbar>
+  <button mat-icon-button class="icon" aria-label="Menu icon">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <h1 class="container-sm">Telephone Directory</h1>
+  <ng-container *ngIf="isFullVer$ | async">
+    <span class="spacer" ></span>
+  </ng-container>
+  <button mat-raised-button mat-button (click)="openDialog()" color="warn">Add Person</button>
+</mat-toolbar>
+
 <div class="container">
   <h1>Telephone Numbers</h1>
-  <app-form></app-form>
   
   <div class="container-sm">
-    <table class="table table-sm">
-      <thead>
-        <tr>
-          <th scope="col">Index</th>
-          <th scope="col">First Name</th>
-          <th scope="col">Last Name</th>
-          <th scope="col">Telephone Number</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let user of users; let idx = index">
-          <th scope="row">{{ [idx + 1] }}</th>
-          <td>{{ user.firstName }}</td>
-          <td>{{ user.lastName }}</td>
-          <td>{{ user.telephoneNumber }}</td>
-        </tr>
-      </tbody>
+    <mat-form-field appearance="standard" id="filter">
+      <mat-label>Filter</mat-label>
+      <input matInput (keyup)="applyFilter($event)" placeholder="Filter" #input>
+    </mat-form-field>
+    
+    <div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource">
+    
+      <ng-container matColumnDef="firstName">
+        <th mat-header-cell *matHeaderCellDef> First Name </th>
+        <td mat-cell *matCellDef="let user"> {{user.firstName}} </td>
+      </ng-container>
+    
+      <ng-container matColumnDef="lastName">
+        <th mat-header-cell *matHeaderCellDef> Last Name </th>
+        <td mat-cell *matCellDef="let user"> {{user.lastName}} </td>
+      </ng-container>
+    
+      <ng-container matColumnDef="telephoneNumbers">
+        <th mat-header-cell *matHeaderCellDef> Telephone Numbers </th>
+        <td mat-cell *matCellDef="let user"> {{user.telephoneNumbers}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef> Action </th>
+        <td mat-cell *matCellDef="let user"> 
+          <button mat-icon-button (click)='editData(user)' color="primary">
+            <mat-icon>edit</mat-icon>
+          </button>
+          <button mat-icon-button (click)='deleteData(user.id)' color="warn">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+    
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+      </tr>
     </table>
   </div>
-
-  
+  </div>
 </div>
 
