--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,30 +1,43 @@
+$table-width: 35rem;
+
+mat-toolbar {
+  display: flex;
+  padding: 0 20px;
+  margin: 0;
+  
+
+  h1 {
+    font-size: 25px;
+  }
+}
+
+.spacer {
+  flex: 1 1 auto;
+}
+
 .container {
-  min-width: 800px;
   margin: 0 auto;
   padding-top: 3rem;
 }
 
 .container-sm {
-  width: 800px;
-  margin: auto;
-  margin-bottom: 20px;
-  width: 50%;
-  border: 3px solid green;
+  max-width: $table-width;
+  margin: 0 auto;
+  width: 80vw;
   padding: 10px;
-}
-
-.row {
-  display: flex;
-
-  .label-id {
-    width: 10rem
-  }
-
-  .form-data {
-    width: 15rem
-  }
 }
 
 h1 {
   text-align: center;
 }
+
+mat-form-field {
+  font-size: 14px;
+  display: inline;
+  //max-width: $table-width;
+  width: 50vw;
+}
+
+.mat-elevation-z8 {    
+  overflow-x: auto;
+ }
