--- a/src/app/form/form.component.scss
+++ b/src/app/form/form.component.scss
@@ -1,36 +1,26 @@
-.telephone-number {
+mat-form-field {
+  width: 100%;
+}
+
+mat-dialog-actions {
   display: flex;
+  flex-direction: column; 
 
-  .label-id {
-    width: 15rem
-  }
-
-  .form-data {
-    width: 15rem
-  }
-
-  i {
-    cursor: pointer
+  .submit-btn {
+    width: 70px;
+    height: 40px;
+    margin-top: 15px;
+    margin-left: 85%;
   }
 }
 
-.container-sm {
-  width: 800px;
-  margin: auto;
-  margin-bottom: 20px;
-  width: 50%;
-  border: 3px solid green;
-  padding: 10px;
-}
 
-.row {
-  display: flex;
-
-  .label-id {
-    width: 10rem
-  }
-
-  .form-data {
-    width: 15rem
+@media (max-width: 540px) {
+  .submit-btn {
+    width: 70px;
+    height: 40px;
+    margin-top: 15px;
+    margin-left: 85%;
   }
 }
+
